# google-docs-skill

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
examples/: sample_operations.md
references/: troubleshooting.md
scripts/release/: package.sh
src/: auth.rs  google_api.rs
