[package]
name = "google_docs_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
url = "2"
urlencoding = "2"

[[bin]]
name = "docs_manager"
path = "src/bin/docs_manager.rs"

[[bin]]
name = "drive_manager"
path = "src/bin/drive_manager.rs"

[[bin]]
name = "sheets_manager"
path = "src/bin/sheets_manager.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
